force-app/main/default/objects/Product_Cycle_History__c/Product_Cycle_History__c.object-meta.xml
<CustomObject>
    <description>Product Sanpshot</description>
    <label>Product Cycle History</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Product Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Cycle History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>