force-app/main/default/objects/Product_Cycle_History__c/fields/Card_Used_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Card_Used_This_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Used This Month</label>
    <length>100</length>
    <type>Text</type>
</CustomField>