force-app/main/default/objects/Product_Cycle_History__c/fields/Current_Balance_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Balance Effective Date</label>
    <type>Date</type>
</CustomField>