force-app/main/default/objects/Product_Cycle_History__c/fields/Last_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Statement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Statement  Date</label>
    <type>Date</type>
</CustomField>