force-app/main/default/objects/Product_Cycle_History__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Payment  Date</label>
    <type>Date</type>
</CustomField>