force-app/main/default/objects/Product_Cycle_History__c/fields/PRIN_Number__c.field-meta.xml
<CustomField>
    <fullName>PRIN_Number__c</fullName>
    <description>PRIN Number</description>
    <inlineHelpText>PRIN Number</inlineHelpText>
    <label>PRIN Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>