force-app/main/default/objects/Product_Cycle_History__c/fields/Product_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Last_Modified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Last Modified Date</label>
    <type>DateTime</type>
</CustomField>